# SysYCompiler

./: .gitignore  CMakeLists.txt  Makefile  bash_test.py  compile_commands.json  config.h  gramtree.y  main.c  printf_ast.txt  readme.md  test.txt
backend/dev/: Pass.c  create_test_example.h  interface.c  operand.c  register_allocate.c  tests.c  variable_map.c
backend/inc/: arm.h  arm_assembly.h  debug.h  dependency.h  enum_2_str.h  input.h  memory_manager.h  operand.h  optimize.h  print_format.h  register_allocate.h  symbol_table.h  translate.h  variable_map.h
backend/src/: arm.c  arm_assembly.c  (+19 more)
cds/: hash_map.c  priority_queue.c
doc/: backend.md  interface.md
include/: Pass.h  bblock.h  c_container_auxiliary.h  function.h  gramtree.tab.h  instruction.h  symbol_table.h  type.h  use.h  user.h  value.h
interface/: interface.md  interface_zzq.c  interface_zzq.h
lib/: hash.c  hash_set.c  list.c  queue.c  stack.c  tree_map.c  trie.c  vector.c
my_cases/: global_arr.c  logical_or.c  mix_features.c  number.c
output/: out.txt  printf_ast.txt
scripts/: bash_rename_example.py  bash_test.py  env_init.sh
src/: Ast.c  Pass.c  backend.c  bblock.c  c_container_auxiliary.c  function.c  gramtree.tab.c  gramtree.tab.h  instruction.c  lex.yy.c  optimization.c  symbol_table.c  type.c  use.c  user.c  value.c
testAssembler/: array.s  mul.s
testGNU/: a.out  dymatic_array.c  dymatic_array.s  input5.s
test_cases/: 00_main.c  01_var_defn2.c  05_arr_defn4.c  09_func_defn.c  11_add2.c  21_if_test2.c  33_while_if_test3.c  34_arr_expr_len.c  55_sort_test1.c  rename.sh
(+1 files in other folders)
